Statement Alignment CSS Fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
@@ -936,6 +936,7 @@
 	
 	.orderStatementL1Body > .orderStatChildBody {
 		padding: 5px;
+		display: flow-root;
 	}
 	
 	.orderStatementL2Body > p {
